# citenet

./: .env.development  .env.production  .gitignore  README.md  index.html  main.py  package.json  savedrecs.txt  vercel.json  vue.config.js
.devcontainer/: Dockerfile
.github/workflows/: dockerimage.yml
api/: hello.py  index.py  main.py  pyproject.toml  requirements.txt  requirment.txt
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
citenet/: README.md  main.py
pf/: package.json
pf/.github/workflows/: dockerimage.yml
pf/src/: App.vue
pf/src/logic/: textToArticles.ts
pf/src/router/: index.ts
pf/src/views/: DataTable.vue  Graph.vue
src/: App.vue  main.js  main.ts
src/components/: DataTable.vue
src/logic/: textToArticles.ts
src/plugins/: vuetify.ts
src/router/: index.js  index.ts
src/utils/: textToArticles.ts
src/views/: DataTable.vue  Details.vue  Graph.vue
tests/: test_citenet.py
