[tool.poetry]
name = "citenet"
version = "0.1.0"
description = "A WoS cite analyzer"
authors = ["jialanxin <jialanxin1996@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.2"
uvicorn = "^0.11.5"
python-multipart = "^0.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
